objects/Branch__c.object
<CustomObject   >
    <description>Branch</description>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch Lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Branch__c.RecordType.Id</field>
                <operation>notEqual</operation>
                <value/>
            </filterItems>
            <infoMessage>Select a record type</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Email__c</fullName>
        <label>Test Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Test_Two__c</fullName>
        <label>Test Two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Id</field>
                <operation>notEqual</operation>
                <value/>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Branch</label>
    <listViews>
        <fullName>TargetHelloQueu_Branch</fullName>
        <filterScope>Queue</filterScope>
        <label>TargetHelloQueu</label>
        <queue>TargetHelloQueu</queue>
        <sharedTo/>
    </listViews>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branches</pluralLabel>
    <recordTypes>
        <fullName>Jumbo</fullName>
        <active>true</active>
        <label>Jumbo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tingu</fullName>
        <active>true</active>
        <label>Tingu</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Reason_One__c</fullName>
        <label>Reason One (A)</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Reason_Two__c</fullName>
        <label>Reason Two</label>
    </sharingReasons>
    <validationRules>
        <fullName>one</fullName>
        <active>true</active>
        <description>Branch Validation Rule</description>
        <errorConditionFormula>Name = null</errorConditionFormula>
        <errorMessage>error</errorMessage>
    </validationRules>
</CustomObject>